syntax = "proto3";
option go_package = "github.com/eolinker/eosc/service";
package service;

//cli service : 提供管理接口给 cli

message JoinRequest {
  string broadcastIP = 1;
  int32 broadcastPort = 2;

}
message JoinResponse{
  string msg  = 1;
  string code = 2;
  NodeInfo info = 3;
}

message NodeInfo {
  string nodeKey = 1;
  int32 nodeID = 2;
}

message LeaveRequest{
  NodeInfo info = 1;
}

message LeaveResponse{
  string msg  = 1;
  string code = 2;
}

message InfoRequest{}
message InfoResponse{}

message ClusterRequest{}
message ClusterResponse{}

message StartConfig {
  repeated EnvConfig config = 1;
}



message EnvConfig {
  string key = 1;
  string value = 2;
}

service CtiService {
  rpc Join(JoinRequest)returns(JoinResponse){}
  rpc Leave(LeaveRequest)returns(LeaveResponse){}
}
